--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
   },
   "dependencies": {
     "@wordpress/block-library": "^2.27.0",
+    "babel-plugin-styled-components": "^1.12.0",
+    "flickity": "^2.2.2",
     "gatsby": "^2.30.1",
     "gatsby-image": "^2.9.0",
     "gatsby-plugin-manifest": "^2.10.0",
+    "gatsby-plugin-netlify": "^2.7.0",
     "gatsby-plugin-offline": "^3.8.0",
     "gatsby-plugin-react-helmet": "^3.8.0",
+    "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-sharp": "^2.12.0",
+    "gatsby-plugin-styled-components": "^4.1.0",
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-source-wordpress": "^4.0.0",
     "gatsby-transformer-sharp": "^2.9.0",
@@ -22,9 +27,12 @@
     "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-flickity-component": "^3.6.1",
     "react-helmet": "^5.2.1",
-    "typeface-merriweather": "1.1.13",
-    "typeface-montserrat": "1.1.13"
+    "react-icons": "^4.2.0",
+    "react-sanfona": "^1.5.0",
+    "styled-components": "^5.2.1",
+    "typeface-zilla-slab": "^1.1.13"
   },
   "devDependencies": {
     "dumper.js": "^1.3.1",
