--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-offline": "^3.8.0",
     "gatsby-plugin-react-helmet": "^3.8.0",
+    "gatsby-plugin-sass": "^4.2.0",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-sharp": "^2.12.0",
     "gatsby-plugin-styled-components": "^4.1.0",
@@ -26,9 +27,12 @@
     "gatsby-transformer-sharp": "^2.9.0",
     "html-react-parser": "^1.1.1",
     "lodash": "^4.17.20",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.1",
     "react-flickity-component": "^3.6.1",
+    "react-headroom": "^3.1.1",
     "react-helmet": "^5.2.1",
     "react-icons": "^4.2.0",
     "react-sanfona": "^1.5.0",
@@ -37,7 +41,8 @@
   },
   "devDependencies": {
     "dumper.js": "^1.3.1",
-    "prettier": "2.2.1"
+    "prettier": "2.2.1",
+    "sass": "^1.32.8"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
