--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-headroom": "^3.1.1",
     "react-helmet": "^5.2.1",
     "react-icons": "^4.2.0",
+    "react-image-lightbox": "^5.1.1",
     "react-sanfona": "^1.5.0",
     "styled-components": "^5.2.1",
     "typeface-zilla-slab": "^1.1.13"
