--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "flickity": "^2.2.2",
     "gatsby": "^2.30.1",
     "gatsby-image": "^2.9.0",
+    "gatsby-omni-font-loader": "^1.3.1",
     "gatsby-plugin-manifest": "^2.10.0",
     "gatsby-plugin-netlify": "^2.7.0",
     "gatsby-plugin-netlify-cache": "^1.2.0",
