--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby": "^2.30.1",
     "gatsby-image": "^2.9.0",
     "gatsby-omni-font-loader": "^1.3.1",
+    "gatsby-plugin-layout": "^2.4.0",
     "gatsby-plugin-manifest": "^2.10.0",
     "gatsby-plugin-netlify": "^2.7.0",
     "gatsby-plugin-netlify-cache": "^1.2.0",
@@ -22,7 +23,9 @@
     "gatsby-plugin-sass": "^4.2.0",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-sharp": "^2.12.0",
+    "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-plugin-styled-components": "^4.1.0",
+    "gatsby-plugin-transitions": "^2.1.7",
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-source-wordpress": "^4.0.0",
     "gatsby-transformer-sharp": "^2.9.0",
@@ -30,6 +33,7 @@
     "lodash": "^4.17.20",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-animated-text": "^0.1.4",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.1",
     "react-flickity-component": "^3.6.1",
@@ -38,6 +42,7 @@
     "react-icons": "^4.2.0",
     "react-image-lightbox": "^5.1.1",
     "react-sanfona": "^1.5.0",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.2.1",
     "typeface-zilla-slab": "^1.1.13"
   },
