--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@wordpress/block-library": "^2.27.0",
     "babel-plugin-styled-components": "^1.12.0",
     "flickity": "^2.2.2",
+    "framer-motion": "^2.9.5",
     "gatsby": "^2.30.1",
     "gatsby-image": "^2.9.0",
     "gatsby-omni-font-loader": "^1.3.1",
@@ -43,6 +44,7 @@
     "react-image-lightbox": "^5.1.1",
     "react-sanfona": "^1.5.0",
     "react-spring": "^8.0.27",
+    "splitting": "^1.0.6",
     "styled-components": "^5.2.1",
     "typeface-zilla-slab": "^1.1.13"
   },
