--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "babel-plugin-styled-components": "^1.12.0",
     "flickity": "^2.2.2",
     "framer-motion": "^2.9.5",
-    "gatsby": "^2.30.1",
+    "gatsby": "^3.7.1",
     "gatsby-image": "^2.9.0",
     "gatsby-omni-font-loader": "^1.3.1",
+    "gatsby-plugin-image": "^1.7.1",
     "gatsby-plugin-layout": "^2.4.0",
     "gatsby-plugin-manifest": "^2.10.0",
     "gatsby-plugin-netlify": "^2.7.0",
