--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-helmet": "^5.2.1",
     "react-icons": "^4.2.0",
     "react-image-lightbox": "^5.1.1",
+    "react-intersection-observer": "^8.32.0",
     "react-sanfona": "^1.5.0",
     "react-spring": "^8.0.27",
     "splitting": "^1.0.6",
