--- a/package.json
+++ b/package.json
@@ -8,28 +8,28 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
-    "@wordpress/block-library": "^2.27.0",
+    "@wordpress/block-library": "^5.0.0",
     "babel-plugin-styled-components": "^1.12.0",
     "flickity": "^2.2.2",
     "framer-motion": "^2.9.5",
     "gatsby": "^3.7.1",
-    "gatsby-image": "^2.9.0",
+    "gatsby-image": "^3.10.0",
     "gatsby-omni-font-loader": "^1.3.1",
     "gatsby-plugin-image": "^1.7.1",
     "gatsby-plugin-layout": "^2.4.0",
-    "gatsby-plugin-manifest": "^2.10.0",
-    "gatsby-plugin-netlify": "^2.7.0",
-    "gatsby-plugin-offline": "^3.8.0",
-    "gatsby-plugin-react-helmet": "^3.8.0",
+    "gatsby-plugin-manifest": "^3.10.0",
+    "gatsby-plugin-netlify": "^3.10.0",
+    "gatsby-plugin-offline": "^4.10.0",
+    "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-sass": "^4.2.0",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
-    "gatsby-plugin-sharp": "^2.12.0",
+    "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-plugin-styled-components": "^4.1.0",
     "gatsby-plugin-transitions": "^2.1.7",
-    "gatsby-source-filesystem": "^2.9.0",
-    "gatsby-source-wordpress": "^4.0.0",
-    "gatsby-transformer-sharp": "^2.9.0",
+    "gatsby-source-filesystem": "^3.10.0",
+    "gatsby-source-wordpress": "^5.10.0",
+    "gatsby-transformer-sharp": "^3.10.0",
     "html-react-parser": "^1.1.1",
     "lodash": "^4.17.20",
     "node-sass": "^5.0.0",
@@ -39,7 +39,7 @@
     "react-dom": "^17.0.1",
     "react-flickity-component": "^3.6.1",
     "react-headroom": "^3.1.1",
-    "react-helmet": "^5.2.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-image-lightbox": "^5.1.1",
     "react-intersection-observer": "^8.32.0",
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "dumper.js": "^1.3.1",
+    "mitt": "^3.0.0",
     "prettier": "2.2.1",
     "sass": "^1.32.8"
   },
