--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-source-wordpress": "^5.10.0",
     "gatsby-transformer-sharp": "^3.10.0",
     "html-react-parser": "^1.1.1",
+    "lmdb-store": "^1.6.4-pre",
     "lodash": "^4.17.20",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
