--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby": "^3.7.1",
     "gatsby-image": "^3.10.0",
     "gatsby-omni-font-loader": "^1.3.1",
+    "gatsby-plugin-gdpr-cookies": "^2.0.6",
     "gatsby-plugin-image": "^1.7.1",
     "gatsby-plugin-layout": "^2.4.0",
     "gatsby-plugin-manifest": "^3.10.0",
