--- a/package.json
+++ b/package.json
@@ -8,54 +8,54 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
-    "@wordpress/block-library": "^5.0.0",
-    "babel-plugin-styled-components": "^1.12.0",
+    "@wordpress/block-library": "^6.0.1",
+    "babel-plugin-styled-components": "^1.13.3",
     "flickity": "^2.2.2",
-    "framer-motion": "^2.9.5",
-    "gatsby": "^3.7.1",
-    "gatsby-image": "^3.10.0",
-    "gatsby-omni-font-loader": "^1.3.1",
+    "framer-motion": "^4.1.17",
+    "gatsby": "^4.0.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-omni-font-loader": "^1.3.2",
     "gatsby-plugin-gdpr-cookies": "^2.0.6",
-    "gatsby-plugin-image": "^1.7.1",
-    "gatsby-plugin-layout": "^2.4.0",
-    "gatsby-plugin-manifest": "^3.10.0",
-    "gatsby-plugin-netlify": "^3.10.0",
-    "gatsby-plugin-offline": "^4.10.0",
-    "gatsby-plugin-react-helmet": "^4.10.0",
-    "gatsby-plugin-sass": "^4.2.0",
+    "gatsby-plugin-image": "^2.0.0",
+    "gatsby-plugin-layout": "^3.0.0",
+    "gatsby-plugin-manifest": "^4.0.0",
+    "gatsby-plugin-netlify": "^3.14.0",
+    "gatsby-plugin-offline": "^5.0.0",
+    "gatsby-plugin-react-helmet": "^5.0.0",
+    "gatsby-plugin-sass": "^5.0.0",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
-    "gatsby-plugin-sharp": "^3.10.2",
+    "gatsby-plugin-sharp": "^4.0.0",
     "gatsby-plugin-smoothscroll": "^1.2.0",
-    "gatsby-plugin-styled-components": "^4.1.0",
+    "gatsby-plugin-styled-components": "^5.0.0",
     "gatsby-plugin-transitions": "^2.1.7",
-    "gatsby-source-filesystem": "^3.10.0",
-    "gatsby-source-wordpress": "^5.10.0",
-    "gatsby-transformer-sharp": "^3.10.0",
-    "html-react-parser": "^1.1.1",
-    "lmdb-store": "^1.6.4-pre",
-    "lodash": "^4.17.20",
-    "node-sass": "^5.0.0",
-    "react": "^17.0.1",
+    "gatsby-source-filesystem": "^4.0.0",
+    "gatsby-source-wordpress": "^6.0.0",
+    "gatsby-transformer-sharp": "^4.0.0",
+    "html-react-parser": "^1.4.0",
+    "lmdb-store": "^1.6.11",
+    "lodash": "^4.17.21",
+    "node-sass": "^6.0.1",
+    "react": "^17.0.2",
     "react-animated-text": "^0.1.4",
     "react-burger-menu": "^3.0.6",
-    "react-dom": "^17.0.1",
-    "react-flickity-component": "^3.6.1",
-    "react-headroom": "^3.1.1",
+    "react-dom": "^17.0.2",
+    "react-flickity-component": "^3.6.2",
+    "react-headroom": "^3.2.0",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.2.0",
-    "react-image-lightbox": "^5.1.1",
-    "react-intersection-observer": "^8.32.0",
+    "react-icons": "^4.3.1",
+    "react-image-lightbox": "^5.1.4",
+    "react-intersection-observer": "^8.32.1",
     "react-sanfona": "^1.5.0",
-    "react-spring": "^8.0.27",
+    "react-spring": "^9.3.0",
     "splitting": "^1.0.6",
-    "styled-components": "^5.2.1",
+    "styled-components": "^5.3.3",
     "typeface-zilla-slab": "^1.1.13"
   },
   "devDependencies": {
     "dumper.js": "^1.3.1",
     "mitt": "^3.0.0",
-    "prettier": "2.2.1",
-    "sass": "^1.32.8"
+    "prettier": "2.4.1",
+    "sass": "^1.43.3"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
