--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "gatsby-plugin-manifest": "^4.0.0",
     "gatsby-plugin-offline": "^5.0.0",
     "gatsby-plugin-react-helmet": "^5.0.0",
+    "gatsby-plugin-robots-txt": "^1.6.14",
     "gatsby-plugin-sass": "^5.0.0",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-sharp": "^4.0.0",
+    "gatsby-plugin-sitemap": "^5.1.0",
     "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-plugin-styled-components": "^5.0.0",
     "gatsby-plugin-transitions": "^2.1.7",
@@ -38,6 +40,7 @@
     "react": "^17.0.2",
     "react-animated-text": "^0.1.4",
     "react-burger-menu": "^3.0.6",
+    "react-cookie-consent": "^6.4.1",
     "react-dom": "^17.0.2",
     "react-flickity-component": "^3.6.2",
     "react-headroom": "^3.2.0",
