--- a/package.json
+++ b/package.json
@@ -12,29 +12,31 @@
     "babel-plugin-styled-components": "^1.13.3",
     "flickity": "^2.2.2",
     "framer-motion": "^4.1.17",
-    "gatsby": "^4.0.1",
+    "gatsby": "^4.1.0",
     "gatsby-image": "^3.11.0",
-    "gatsby-omni-font-loader": "^1.3.2",
-    "gatsby-plugin-canonical-urls": "^4.0.0",
+    "gatsby-omni-font-loader": "^1.3.3",
+    "gatsby-plugin-canonical-urls": "^4.1.0",
     "gatsby-plugin-gdpr-cookies": "^2.0.8",
-    "gatsby-plugin-image": "^2.0.0",
-    "gatsby-plugin-layout": "^3.0.0",
-    "gatsby-plugin-manifest": "^4.0.0",
-    "gatsby-plugin-offline": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^5.0.0",
+    "gatsby-plugin-htaccess": "^1.4.0",
+    "gatsby-plugin-image": "^2.1.0",
+    "gatsby-plugin-layout": "^3.1.0",
+    "gatsby-plugin-manifest": "^4.1.0",
+    "gatsby-plugin-offline": "^5.1.0",
+    "gatsby-plugin-react-helmet": "^5.1.0",
     "gatsby-plugin-robots-txt": "^1.6.14",
-    "gatsby-plugin-sass": "^5.0.0",
+    "gatsby-plugin-sass": "^5.1.0",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
-    "gatsby-plugin-sharp": "^4.0.0",
+    "gatsby-plugin-sharp": "^4.1.0",
     "gatsby-plugin-sitemap": "^5.1.0",
     "gatsby-plugin-smoothscroll": "^1.2.0",
-    "gatsby-plugin-styled-components": "^5.0.0",
+    "gatsby-plugin-styled-components": "^5.1.0",
     "gatsby-plugin-transitions": "^2.1.7",
     "gatsby-source-filesystem": "^4.0.0",
-    "gatsby-source-wordpress": "^6.0.0",
-    "gatsby-transformer-sharp": "^4.0.0",
+    "gatsby-source-wordpress": "^6.1.0",
+    "gatsby-transformer-sharp": "^4.1.0",
     "html-react-parser": "^1.4.0",
-    "lmdb-store": "^1.6.11",
+    "install": "^0.13.0",
+    "lmdb-store": "^1.6.13",
     "lodash": "^4.17.21",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
@@ -58,7 +60,7 @@
     "dumper.js": "^1.3.1",
     "mitt": "^3.0.0",
     "prettier": "2.4.1",
-    "sass": "^1.43.3"
+    "sass": "^1.43.4"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
