--- a/package.json
+++ b/package.json
@@ -8,35 +8,36 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
-    "@wordpress/block-library": "^6.0.2",
-    "babel-plugin-styled-components": "^1.13.3",
+    "@wordpress/block-library": "^6.0.9",
+    "babel-plugin-styled-components": "^2.0.1",
     "flickity": "^2.2.2",
-    "framer-motion": "^4.1.17",
-    "gatsby": "^4.1.0",
+    "framer-motion": "^5.3.3",
+    "gatsby": "^4.2.0",
     "gatsby-image": "^3.11.0",
     "gatsby-omni-font-loader": "^1.3.3",
-    "gatsby-plugin-canonical-urls": "^4.1.0",
+    "gatsby-plugin-canonical-urls": "^4.2.0",
     "gatsby-plugin-gdpr-cookies": "^2.0.8",
     "gatsby-plugin-htaccess": "^1.4.0",
-    "gatsby-plugin-image": "^2.1.0",
-    "gatsby-plugin-layout": "^3.1.0",
-    "gatsby-plugin-manifest": "^4.1.0",
-    "gatsby-plugin-offline": "^5.1.0",
-    "gatsby-plugin-react-helmet": "^5.1.0",
+    "gatsby-plugin-image": "^2.2.0",
+    "gatsby-plugin-layout": "^3.2.0",
+    "gatsby-plugin-manifest": "^4.2.0",
+    "gatsby-plugin-netlify": "^3.14.0",
+    "gatsby-plugin-offline": "^5.2.0",
+    "gatsby-plugin-react-helmet": "^5.2.0",
     "gatsby-plugin-robots-txt": "^1.6.14",
-    "gatsby-plugin-sass": "^5.1.0",
+    "gatsby-plugin-sass": "^5.2.0",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
-    "gatsby-plugin-sharp": "^4.1.0",
-    "gatsby-plugin-sitemap": "^5.1.0",
+    "gatsby-plugin-sharp": "^4.2.0",
+    "gatsby-plugin-sitemap": "^5.2.0",
     "gatsby-plugin-smoothscroll": "^1.2.0",
-    "gatsby-plugin-styled-components": "^5.1.0",
+    "gatsby-plugin-styled-components": "^5.2.0",
     "gatsby-plugin-transitions": "^2.1.7",
-    "gatsby-source-filesystem": "^4.0.0",
-    "gatsby-source-wordpress": "^6.1.0",
-    "gatsby-transformer-sharp": "^4.1.0",
+    "gatsby-source-filesystem": "^4.2.0",
+    "gatsby-source-wordpress": "^6.2.0",
+    "gatsby-transformer-sharp": "^4.2.0",
     "html-react-parser": "^1.4.0",
     "install": "^0.13.0",
-    "lmdb-store": "^1.6.13",
+    "lmdb-store": "^1.6.14",
     "lodash": "^4.17.21",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
@@ -49,9 +50,9 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-image-lightbox": "^5.1.4",
-    "react-intersection-observer": "^8.32.2",
+    "react-intersection-observer": "^8.32.4",
     "react-sanfona": "^1.5.0",
-    "react-spring": "^9.3.0",
+    "react-spring": "^9.3.2",
     "splitting": "^1.0.6",
     "styled-components": "^5.3.3",
     "typeface-zilla-slab": "^1.1.13"
@@ -60,7 +61,7 @@
     "dumper.js": "^1.3.1",
     "mitt": "^3.0.0",
     "prettier": "2.4.1",
-    "sass": "^1.43.4"
+    "sass": "^1.43.5"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
