--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-canonical-urls": "^4.4.0",
     "gatsby-plugin-gdpr-cookies": "^2.0.8",
     "gatsby-plugin-htaccess": "^1.4.0",
+    "gatsby-plugin-i18n": "^1.0.1",
     "gatsby-plugin-image": "^2.4.0",
     "gatsby-plugin-layout": "^3.4.0",
     "gatsby-plugin-manifest": "^4.4.0",
